<resources>
    <string name="app_name">ArchaeologicalFieldwork</string>
    <string name="settings">Settings</string>
    <string name="save_Site">Save Site</string>
    <string name="menu_addSite">Add</string>
    <string name="hint_SiteName">Site Name</string>
    <string name="hint_siteDescription">Site Description</string>
    <string name="menu_cancelSite">Cancel</string>
    <string name="enter_site_name">Please enter a Site Name</string>
    <string name="menu_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_site_image">Select Site Image</string>
    <string name="change_site_image">Change Site image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deleteSite">Delete</string>
    <string name="title_activity_site_maps">Map of all Sites</string>
    <string name="menu_saveSite">Save</string>
    <string name="title_activity_site_list">Sites</string>
    <string name="title_activity_site">Site</string>
    <string name="title_activity_edit_location">SiteLocation</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favourites">Favourites</string>
    <string name="all_sites">All Sites</string>
</resources>
