<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.archaeologicalfieldwork.activities.SiteActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
                android:id="@+id/activity_site_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" android:background="@android:color/holo_green_dark"/>
    </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <EditText
                    android:id="@+id/siteName"
                    android:layout_width="365dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="64dp"
                    android:ems="10"
                    android:hint="@string/hint_SiteName"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.503"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            <EditText
                    android:id="@+id/description"
                    android:layout_width="365dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/hint_siteDescription"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/siteName" />
            <Button
                    android:id="@+id/addImage"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/button_addImage"
                    app:layout_constraintStart_toStartOf="@+id/btnAdd"
                    app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
            <ImageView
                    android:id="@+id/siteImage"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.555"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/siteLocation"
                    app:layout_constraintVertical_bias="0.173"
                    app:srcCompat="@drawable/ic_launcher_background" />
            <Button
                    android:id="@+id/siteLocation"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/button_location"
                    app:layout_constraintEnd_toEndOf="@+id/btnAdd"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/addImage"
                    app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
            <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="365dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/save_Site"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

        </android.support.constraint.ConstraintLayout>



    </RelativeLayout>

</android.support.constraint.ConstraintLayout>